--- a/src/assets/css/all_videos.scss
+++ b/src/assets/css/all_videos.scss
@@ -1,14 +1,39 @@
 .screen-logo {
-
   margin: 0 auto;
   width: 26%;
   height: 27%;
   display: flex;
   padding-top: 10%;
 }
+.screen-logo svg path{
+  transition:all 700ms ease;
+  -webkit-transition: all 700ms ease;
+}
 
+.top-icon{
+  width:100%;
+  height:100%;
+  margin:0 auto;
+}
+.screen-logo div.icon-container{
+  width: 72px;
+  height: 72px;
+  margin: 0 auto;
+}
+.chosen{
+  -webkit-animation: heartbeat 1s ease-in-out both;
+  animation: heartbeat 1s ease-in-out both;
+  }
+.chosen#movie{
+  fill: #633193;
+}
+.chosen#youtube{
+  fill:#E52D27;
+}
+.chosen#soundcloud{
+  fill:#F67C11;
+}
 .screen-logo-loaded {
-
   margin-left: 10px;
   margin-top: 20px;
   width: 17%;
@@ -21,7 +46,6 @@
   width: 100%;
   height: 100%;
 }
-
 .wFncld {
   margin-top: 3px;
   color: #9aa0a6;
@@ -179,5 +203,75 @@ padding-right: 12px;
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+/* Keyframes for Top Icon Animation */
+@-webkit-keyframes heartbeat {
+  from {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  10% {
+    -webkit-transform: scale(0.91);
+    transform: scale(0.91);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  17% {
+    -webkit-transform: scale(0.98);
+    transform: scale(0.98);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  33% {
+    -webkit-transform: scale(0.87);
+    transform: scale(0.87);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  45% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+}
+@keyframes heartbeat {
+  from {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  10% {
+    -webkit-transform: scale(0.91);
+    transform: scale(0.91);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  17% {
+    -webkit-transform: scale(0.98);
+    transform: scale(0.98);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  33% {
+    -webkit-transform: scale(0.87);
+    transform: scale(0.87);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  45% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
   }
 }
