--- a/src/assets/css/all_videos.scss
+++ b/src/assets/css/all_videos.scss
@@ -25,7 +25,7 @@
   animation: heartbeat 1s ease-in-out both;
   }
 .chosen#movie{
-  fill: #633193;
+  fill: #4190ff;
 }
 .chosen#youtube{
   fill:#E52D27;
@@ -71,7 +71,8 @@ padding-right: 12px;
   margin: auto auto auto 0;
   border: none;
 
-  &:focus {
+  &:focus{
+
     border: none;
     outline: none;
   }
@@ -116,8 +117,12 @@ padding-right: 12px;
   height: 44px;
   width: 40%;
   margin: 30px auto 0;
-}
 
+}
+.search-query-parent:focus-within {
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+
+}
 .search-query-parent-loaded {
   background: #fff;
   display: flex;
@@ -131,7 +136,6 @@ padding-right: 12px;
   margin-top: 20px;
 
 }
-
 
 .suggestion-parent {
   border: 1px solid #dfe1e5;
