--- a/src/assets/css/single_video.scss
+++ b/src/assets/css/single_video.scss
@@ -1,9 +1,18 @@
+@font-face {
+  font-family: 'myFont';
+  src: local('Handlee'), url('../fonts/Handlee-Regular.ttf') format('truetype');
+}
+$total-items: 5;
+*{
+  padding: 0;
+  margin: 0;
+  font-family: myFont;
+}
 .sv-parent {
   display: inline-flex;
   width: 100%;
   margin-bottom: 20px;
 }
-
 .sv-metadata-line {
   color: var(--ytd-metadata-line-color, var(--yt-spec-text-secondary));
   max-width: 100%;
@@ -16,7 +25,7 @@
   text-transform: var(--ytd-thumbnail-attribution_-_text-transform);
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-
+  list-style-type: none;
   display: inline-flex;
 }
 
@@ -153,10 +162,9 @@
 }
 
 .sv-quick-download-icon-text {
-  padding-left: 1.7vh;
   //padding-bottom: 10px;
   font-size: 12px;
-  text-align: start;
+  text-align: center;
 }
 
 .sv-download-video {
@@ -206,4 +214,156 @@
 
 .sv-download-link {
   padding-top: 10px;
+}
+.sv-modal-overlay{
+  background-color: rgba(0,0,0, 0.7);
+  position: fixed;
+  width:100%;
+  height:100%;
+  display: block;
+  z-index: 2;
+}
+.sv-modal-close-button{
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 10px 10px 0 0;
+  font-weight: 700;
+  cursor: pointer;
+}
+.sv-modal-container{
+  position:fixed;
+  background-image: url("https://media.gettyimages.com/videos/hand-sketched-cartoon-lines-background-in-stop-motion-video-id1021521664?s=640x640");
+  top:50%;
+  width:50%;
+  left:50%;
+  background-color: rgba(255,255,255,1);
+  transform: translate(-50%, -50%);
+  z-index: 5;
+  box-shadow: 0 3px 15px rgba(0, 0, 0, 0.15);
+  border-radius:5px;
+  font-family: myFont,Serif;
+}
+.sv-modal-head{
+  width:100%;
+}
+.sv-modal-head h3{
+  border-left: 2px solid #c6c6c6;
+  padding: 0 0 0 2%;
+  margin: 2%;
+}
+.sv-modal-item{
+  width:100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+}
+.sv-modal-item-body{
+  width:100%;
+  font-size:3vh;
+  background: transparent;
+}
+.sv-modal-item-body .sv-modal-box{
+  width:100%;
+  position: relative;
+  height:auto;
+  display: flex;
+  font-size:2vh;
+  //box-shadow: 0 3px 15px rgba(0, 0, 0, 0.15);
+  border-radius:3px;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  .content{
+    display: flex;
+    box-sizing: border-box;
+  }
+  .sv-modal-box-footer{
+    width: 100%;
+    padding-top: 1vh;
+    margin-top: 10px;
+    border-radius: 3px;
+  }
+}
+
+/* Accordion styles */
+.sv-modal-qualities {
+  border-radius: 0px;
+  overflow: hidden;
+  width: 100%;
+}
+.sv-modal-quality {
+  width: 100%;
+  color: white;
+  overflow: hidden;
+  &-label {
+    box-shadow: 2px 2px 2px #ccc;
+    transition:all 200ms;
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
+    color: #000;
+    background: transparent;
+    font-weight: bold;
+    cursor: pointer;
+    /* Icon */
+    &:hover {
+      background-color: rgba(0,0,0,0.1);
+    }
+    &::after {
+      content: "\276F";
+      width: 1em;
+      height: 1em;
+      text-align: center;
+      transition: all .35s;
+    }
+  }
+  &-content {
+    max-height: 0;
+    padding: 0 1em;
+    color: #fff;
+    background: white;
+    transition: all .35s;
+  }
+  &-close {
+    display: flex;
+    justify-content: flex-end;
+    padding: 1em;
+    font-size: 0.75em;
+    background: #fff;
+    cursor: pointer;
+    &:hover {
+      background: #fff;
+    }
+  }
+}
+
+// :checked
+.sv-modal-quality {
+  &-label{
+
+  }
+  &.active{
+  .sv-modal-quality-content {
+    max-height: 100vh;
+    width: 100%;
+    padding: 1em;
+    color:#000;
+  }
+  .sv-modal-quality-content div{
+    color:#000;
+    line-height: 3vh;
+    cursor: pointer;
+  }
+  .sv-modal-quality-content div.url-link:hover{
+    text-decoration: underline;
+  }
+  .sv-modal-quality-label::after{
+    transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+  }
+  }
 }
