--- a/src/assets/css/all_videos.scss
+++ b/src/assets/css/all_videos.scss
@@ -150,7 +150,7 @@ padding-right: 12px;
 .hsuHs-arrow {
   margin: auto;
   color: #9aa0a6;
-  padding: 0 10px 10px;
+  padding: 0 10px 0;
 }
 
 .right-arrow {
@@ -181,6 +181,24 @@ padding-right: 12px;
   margin: 30px auto 0;
   width: 40%;
 
+}
+.category-container{
+  display: flex;
+  padding-top:2%;
+  justify-content: center;
+  flex-wrap: wrap;
+  div{
+    padding:5px;
+    font-size:14px;
+    font-weight: 700;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+    input{
+      margin:5px;
+    }
+  }
 }
 .search-query-parent:focus-within {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
@@ -274,40 +292,7 @@ padding-right: 12px;
 }
 
 /* Keyframes for Top Icon Animation */
-@-webkit-keyframes heartbeat {
-  from {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    -webkit-transform-origin: center center;
-    transform-origin: center center;
-    -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
-  }
-  10% {
-    -webkit-transform: scale(0.91);
-    transform: scale(0.91);
-    -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
-  }
-  17% {
-    -webkit-transform: scale(0.98);
-    transform: scale(0.98);
-    -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
-  }
-  33% {
-    -webkit-transform: scale(0.87);
-    transform: scale(0.87);
-    -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in;
-  }
-  45% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
-  }
-}
+
 @keyframes heartbeat {
   from {
     -webkit-transform: scale(1);
@@ -371,7 +356,11 @@ padding-right: 12px;
   .search-query-parent{
     width:80%;
   }
+  .category-container div {
+    font-size: 3vh;
+    padding:0px;
 
+  }
 }
 @media only screen and (max-width: 700px) and (min-width: 500px) {
   .screen-logo{
@@ -407,7 +396,7 @@ padding-right: 12px;
 
 @media screen and (min-width: 700px) and (max-width: 1000px){
   .screen-logo{
-    width:50%;
+    width:40%;
   }
   .screen-logo-loaded{
     width:30vh;
