--- a/src/assets/css/all_videos.scss
+++ b/src/assets/css/all_videos.scss
@@ -1,5 +1,6 @@
 .main-container{
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -135,7 +136,7 @@ padding-right: 12px;
 }
 .search-query {
   width: 80%;
-  height:50px;
+  height:60px;
   font-size:17px;
   margin: auto auto auto 0;
   border:none;
@@ -191,7 +192,7 @@ padding-right: 12px;
 display: flex;
   width: 100%;
   justify-content: center;
-  margin-top:2%;
+  margin-top:5%;
   div{
     padding:5px;
     font-size:19px;
