--- a/src/assets/css/all_videos.scss
+++ b/src/assets/css/all_videos.scss
@@ -1,3 +1,8 @@
+$youtubeColor:#EE1B0D;
+$movieColor: #531c01;
+$educationalColor: #104a00;
+$musicColor: #002f8a;
+$adultColor: #670070;
 .main-container{
   display: flex;
   flex-direction: column;
@@ -115,7 +120,7 @@ margin-right:10px;
   height: 100%;
 }
 .wFncld {
-  margin-top: 3px;
+  margin-top: 10px;
   color: #9aa0a6;
   height: 20px;
   width: 20px
@@ -188,11 +193,13 @@ padding-right: 12px;
 
 }
 .category-container{
-  display: inline-flex;
-display: flex;
+  display: flex;
+  position: absolute;
+  left: 0;
+  z-index: -1;
   width: 100%;
   justify-content: center;
-  margin-top:5%;
+  margin-top:80px;
   div{
     padding:5px;
     font-size:19px;
@@ -202,26 +209,97 @@ display: flex;
     align-content: center;
     align-items: center;
     input{
-      margin:5px;
+      position: absolute;
+      opacity: 0;
+      z-index: -1;
+    }
+    label{
+      -webkit-transition: .25s all ease;
+      -o-transition: .25s all ease;
+      transition: .25s all ease;
+      position: relative;
+      margin-right: 1em;
+      padding-left: 2em;
+      padding-right: 1em;
+      line-height: 2;
+      cursor: pointer;
+      &:before {
+        box-sizing: border-box;
+        content: " ";
+        position: absolute;
+        top: 0.3em;
+        left: 0;
+        display: block;
+        width: 1.4em;
+        height: 1.4em;
+        border-radius: .25em;
+        z-index: -1;
+        -webkit-transition: .25s all ease;
+        -o-transition: .25s all ease;
+        transition: .25s all ease;
+      }
     }
   }
+  div.ct-youtube label:before{
+    border:2px solid $youtubeColor;
+  }
+  div.ct-movies label:before{
+  border:2px solid $movieColor;
+  }
+  div.ct-educational label:before{
+    border:2px solid $educationalColor;
+  }
+  div.ct-music label:before{
+    border:2px solid $musicColor;
+  }
+  div.ct-adult label:before{
+    border:2px solid $adultColor;
+  }
+}
+/* Checked */
+.category-container input:checked + label{
+  padding-left: 1em;
+  //color: #000;
+  &:before {
+    top: 0;
+    width: 100%;
+    height: 2em;
+  }
+}
+.category-container div.ct-youtube input:checked +label{
+  color:$youtubeColor;
+}
+.category-container div.ct-movies input:checked +label{
+  color:$movieColor;
+}
+.category-container div.ct-educational input:checked +label{
+  color:$educationalColor;
+}
+.category-container div.ct-music input:checked +label{
+  color:$musicColor;
+}
+.category-container div.ct-adult input:checked +label{
+  color:$adultColor;
 }
 .category-container#loaded{
   justify-content: flex-start;
 }
+
 .search-box-container{
-  border: 1px solid red;
   display: flex;
   width: 100%;
   border: 1px solid #dfe1e5;
   border-radius: 24px;
 }
+.search-query-parent-loaded .search-box-container{
+  width:55%;
+}
 .search-box-container:focus-within {
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px -1px 8px rgba(0, 0, 0, 0.2);
 
 }
 .search-box-container:hover{
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
 }
 input.search-query:hover div.search-box-container{
   background: #ccc;
@@ -240,13 +318,16 @@ input.search-query:hover div.search-box-container{
 
 .suggestion-parent {
   border: 1px solid #dfe1e5;
-  width: 90%;
-  z-index:2;
+  width: 99%;
+  padding: 2px;
+  z-index: 2;
   margin: 0 auto 0;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 6px 7px rgba(0, 0, 0, 0.2);
   min-height: 30px;
   max-height: 300px;
-  //overflow: scroll;
+  background: #fff;
+  border-bottom-right-radius: 24px;
+  border-bottom-left-radius: 24px;
 }
 
 .suggestion-parent-loaded {
@@ -502,3 +583,7 @@ input.search-query:hover div.search-box-container{
     fill:#000000;
   }
 }
+
+
+
+
